2011-04-14 Maxim
- FIX:UI.Vision: The "index_fill" variable processing is fixed for the primitive ElFigure.
- FIX:UI.Vision: Addition figures to be repainted to the selected ones is fixed for the properties dialog for the primitive ElFigure.
- FIX:UI.Vision: Drawing the rects when selecting connected figures is fixed for the primitive ElFigure.
- FIX:UI.Vision: Calculating the line's width and line's border width for the scale < 1 is corrected for the properties dialog of the ElFigure


2011-04-14 Roman
- SYS: Packages build specification files is updated for 0.7.1.
- FIX:DAQ.ModBus: _b0, _i4 prefixes is fixed for EVAL processing.
- UI.Vision: Edit mode is made more usable by hide all parent widget content.
- FIX:DOC: Release notes and properties documents is some fixed.
- FIX:UI.QTCfg, UI.Vision: Syntax higlight engine is fixed for multiblock rules.


2011-04-13 Roman 0.7.1
- DOC: Release notes for version 0.7.1 is added. Index files is updated.
- DOC: README and TODO is updated.
- ModelDB: Model AGLKS DB files is updated.
- UI.QTStarter: Splash is updated for 0.7.1 release.
- FIX:UI.VCAEngine: Syntax higlight is fixed for elements list of primitive ElFigure.
- FIX:UI.Vision: Properties dialog for elements of primitive ElFigure is some fixed and improved. Translation for German is updated.


2011-04-13 Maxim
- UI.Vision: The default values detection is added to the properties dialog at its creation for the primitive ElFigure.
- FIX:UI.Vision: Detecting the figures to be repainted is fixed for the properties dialog for the primitive ElFigure.
- UI.Vision: Checkboxes for the default values set are added to the properties dialog of the ElFigure.
- FIX:UI.Vision: Selecting elements by the rectangle is fixed for the primitive ElFigure.
- FIX:UI.Vision: Focus loosing when properties dialog is called is fixed for the the primitive ElFigure.
- UI.Vision: The fills select for the popup menu options is changed to be from the end of the container for the primitive ElFigure.
